bracken samplename bugfix

--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -110,7 +110,6 @@ rule metaphlan:
 		database = config['metaphlan_database'],
 	shell:
 		"""
-		rm -r {params.out_dir}
 		mkdir -p {params.out_dir}
 		metaphlan --nproc {threads} --bowtie2db {params.database} --input_type fastq --force  -o {output} --bowtie2out {params.prefix}.bowtie2.bz2 $(echo {input} | sed 's/ /,/g') > {log} 2>&1
 		""" 
@@ -165,6 +164,7 @@ rule bracken:
 	conda:
 		join(config['env_yamls'], 'bracken.yaml'),
 	params:
+		kraken_success_file = join(dirs.OUT,'2_kraken2', 'raw_kracken', '{sample}', 'kreport_classes.txcsv'),
 		out_dir = join(dirs.OUT,'2_kraken2', 'raw_bracken', '{sample}'),
 		rank = lambda wildcards: '{}'.format(wildcards.rank)[:1].capitalize(),
 		read_len = config['read_len'],
@@ -174,7 +174,7 @@ rule bracken:
 		mkdir -p {params.out_dir}
 		bracken -r {params.read_len} -d {params.database}  -l {params.rank} -i {input} -o {output} > {log} 2>&1
 		"""
-
+# [ -f {params.kraken_success_file} ] && bracken -r {params.read_len} -d {params.database}  -l {params.rank} -i {input} -o {output} > {log} 2>&1 ||
 
 rule merge_bracken_outputs:
 	input:
@@ -188,10 +188,12 @@ rule merge_bracken_outputs:
 	params:
 		out_dir = join(dirs.OUT, '2_kraken2', 'merged'),
 		ext_script = join(dirs_scr, 'combine_bracken_outputs.py'),
+		names = lambda wildcards: ','.join(expand('{sample}', \
+			sample = SAMPLES)),
 	shell:
 		"""
 		mkdir -p {params.out_dir}
-		python {params.ext_script} --files {input} -o {output}
+		python {params.ext_script} --files {input} -o {output} --names {params.names}
 		"""
 
 
