--- a/configs/parameters.yaml
+++ b/configs/parameters.yaml
@@ -9,7 +9,7 @@ metaphlan: True
 kraken2: True 
 # xtree kingdom options: bacterial_archaeal, viral, protozoa_fungi
 # Separate options on one line with commas (ex. viral,protozoa_fungi)
-xtree: 
+xtree: False
 
 
 # --- metaphlan --- #
