--- a/configs/conda/short-read-taxonomy.yaml
+++ b/configs/conda/short-read-taxonomy.yaml
@@ -1,232 +1,258 @@
 name: short-read-taxonomy
 channels:
-  - conda-forge
   - bioconda
+  - conda-forge
   - defaults
 dependencies:
   - _libgcc_mutex=0.1=conda_forge
   - _openmp_mutex=4.5=2_gnu
   - _r-mutex=1.0.1=anacondar_1
-  - abseil-cpp=20211102.0=h27087fc_1
   - aioeasywebdav=2.4.0=pyha770c72_0
-  - aiohttp=3.8.1=py310h5764c6d_1
-  - aiosignal=1.2.0=pyhd8ed1ab_0
-  - amply=0.1.5=pyhd8ed1ab_0
+  - aiohttp=3.8.5=py311h459d7ec_0
+  - aiosignal=1.3.1=pyhd8ed1ab_0
+  - amply=0.1.6=pyhd8ed1ab_0
   - appdirs=1.4.4=pyh9f0ad1d_0
-  - arrow=1.2.2=pyhd8ed1ab_0
-  - async-timeout=4.0.2=pyhd8ed1ab_0
+  - arrow=1.2.3=pyhd8ed1ab_0
+  - async-timeout=4.0.3=pyhd8ed1ab_0
   - attmap=0.13.2=pyhd8ed1ab_0
-  - attrs=21.4.0=pyhd8ed1ab_0
-  - backports=1.0=py_2
-  - backports.functools_lru_cache=1.6.4=pyhd8ed1ab_0
-  - bbtools=37.62=0
-  - bcrypt=3.2.2=py310h5764c6d_0
+  - attrs=23.1.0=pyh71513ae_1
+  - backports=1.0=pyhd8ed1ab_3
+  - backports.functools_lru_cache=1.6.5=pyhd8ed1ab_0
+  - bcrypt=3.2.2=py311hd4cff14_1
   - binaryornot=0.4.4=py_1
-  - binutils_impl_linux-64=2.36.1=h193b22a_2
-  - boto3=1.24.23=pyhd8ed1ab_0
-  - botocore=1.27.23=pyhd8ed1ab_0
-  - brotlipy=0.7.0=py310h5764c6d_1004
-  - bump2version=1.0.1=pyh9f0ad1d_0
+  - binutils_impl_linux-64=2.40=hf600244_0
+  - boto3=1.28.37=pyhd8ed1ab_0
+  - botocore=1.31.37=pyhd8ed1ab_0
+  - brotlipy=0.7.0=py311hd4cff14_1005
+  - bumpversion=0.5.3=py_1001
   - bwidget=1.9.14=ha770c72_1
   - bzip2=1.0.8=h7f98852_4
-  - c-ares=1.18.1=h7f98852_0
-  - ca-certificates=2022.12.7=ha878542_0
-  - cachetools=5.0.0=pyhd8ed1ab_0
-  - cairo=1.16.0=ha61ee94_1014
-  - certifi=2022.12.7=pyhd8ed1ab_0
-  - cffi=1.15.1=py310h255011f_0
-  - chardet=5.0.0=py310hff52083_0
-  - charset-normalizer=2.1.0=pyhd8ed1ab_0
-  - click=8.1.3=py310hff52083_0
+  - c-ares=1.19.1=hd590300_0
+  - ca-certificates=2023.11.17=hbcca054_0
+  - cachetools=5.3.1=pyhd8ed1ab_0
+  - cairo=1.18.0=h3faef2a_0
+  - certifi=2023.11.17=pyhd8ed1ab_0
+  - cffi=1.15.1=py311h409f033_3
+  - chardet=5.2.0=py311h38be061_0
+  - charset-normalizer=3.2.0=pyhd8ed1ab_0
+  - click=8.1.7=unix_pyh707e725_0
   - click-default-group=1.2.4=pyhd8ed1ab_0
-  - coincbc=2.10.5=hcee13e7_1
-  - configargparse=1.5.3=pyhd8ed1ab_0
+  - coin-or-cbc=2.10.10=h9002f0b_0
+  - coin-or-cgl=0.60.7=h516709c_0
+  - coin-or-clp=1.17.8=h1ee7a9c_0
+  - coin-or-osi=0.108.8=ha2443b9_0
+  - coin-or-utils=2.11.9=hee58242_0
+  - coincbc=2.10.10=0_metapackage
+  - colorama=0.4.6=pyhd8ed1ab_0
+  - configargparse=1.7=pyhd8ed1ab_0
   - connection_pool=0.0.3=pyhd3deb0d_0
-  - cookiecutter=2.1.1=pyh6c4a22f_0
-  - cryptography=37.0.2=py310h597c629_0
-  - curl=7.83.1=h7bff187_0
-  - datrie=0.8.2=py310h6acc77f_3
-  - decorator=5.1.1=pyhd8ed1ab_0
+  - cookiecutter=2.3.0=pyh1a96a4e_0
+  - cryptography=41.0.3=py311h63ff55d_0
+  - curl=8.4.0=hca28451_0
+  - datrie=0.8.2=py311hd4cff14_6
   - defusedxml=0.7.1=pyhd8ed1ab_0
-  - docutils=0.19=py310hff52083_0
-  - dpath=2.0.6=py310hff52083_1
-  - dropbox=11.32.0=pyhd8ed1ab_0
-  - expat=2.4.9=h27087fc_0
+  - docutils=0.20.1=py311h38be061_0
+  - dpath=2.1.6=pyha770c72_0
+  - dropbox=11.36.2=pyhd8ed1ab_0
+  - eido=0.2.1=pyhd8ed1ab_0
+  - exceptiongroup=1.1.3=pyhd8ed1ab_0
+  - expat=2.5.0=hcb278e6_1
   - filechunkio=1.8=py_2
-  - filelock=3.7.1=pyhd8ed1ab_0
   - font-ttf-dejavu-sans-mono=2.37=hab24e00_0
   - font-ttf-inconsolata=3.000=h77eed37_0
   - font-ttf-source-code-pro=2.038=h77eed37_0
-  - font-ttf-ubuntu=0.83=hab24e00_0
-  - fontconfig=2.14.0=hc2a2eb6_1
+  - font-ttf-ubuntu=0.83=h77eed37_1
+  - fontconfig=2.14.2=h14ed4e7_0
   - fonts-conda-ecosystem=1=0
   - fonts-conda-forge=1=0
-  - freetype=2.12.1=hca18f0e_0
+  - freetype=2.12.1=h267a509_2
   - fribidi=1.0.10=h36c2ea0_0
-  - frozenlist=1.3.0=py310h5764c6d_1
+  - frozenlist=1.4.0=py311h459d7ec_0
   - ftputil=5.0.4=pyhd8ed1ab_0
-  - gcc_impl_linux-64=12.1.0=hea43390_16
-  - gettext=0.19.8.1=h27087fc_1009
-  - gfortran_impl_linux-64=12.1.0=h1db8e46_16
-  - gitdb=4.0.9=pyhd8ed1ab_0
-  - gitpython=3.1.27=pyhd8ed1ab_0
-  - google-api-core=2.8.2=pyhd8ed1ab_0
-  - google-api-python-client=2.52.0=pyhd8ed1ab_0
-  - google-auth=2.9.0=pyh6c4a22f_0
+  - gcc_impl_linux-64=13.1.0=hc4be1a9_0
+  - gettext=0.21.1=h27087fc_0
+  - gfortran_impl_linux-64=13.1.0=hd511a9b_0
+  - gitdb=4.0.10=pyhd8ed1ab_0
+  - gitpython=3.1.32=pyhd8ed1ab_0
+  - google-api-core=2.11.1=pyhd8ed1ab_0
+  - google-api-python-client=2.97.0=pyhd8ed1ab_0
+  - google-auth=2.22.0=pyh1a96a4e_0
   - google-auth-httplib2=0.1.0=pyhd8ed1ab_1
-  - google-cloud-core=2.3.1=pyhd8ed1ab_0
-  - google-cloud-storage=2.4.0=pyh6c4a22f_0
-  - google-crc32c=1.1.2=py310he8fe98e_3
-  - google-resumable-media=2.3.3=pyhd8ed1ab_0
-  - googleapis-common-protos=1.56.3=py310hff52083_0
+  - google-cloud-core=2.3.3=pyhd8ed1ab_0
+  - google-cloud-storage=2.10.0=pyh1a96a4e_0
+  - google-crc32c=1.1.2=py311h98db957_4
+  - google-resumable-media=2.5.0=pyhd8ed1ab_0
+  - googleapis-common-protos=1.60.0=pyhd8ed1ab_0
   - graphite2=1.3.13=h58526e2_1001
-  - grpc-cpp=1.47.0=hbd84cd8_1
-  - grpcio=1.47.0=py310ha0b7d45_1
-  - gsl=2.7=he838d99_0
-  - gxx_impl_linux-64=12.1.0=hea43390_16
-  - harfbuzz=5.2.0=hf9f4e7c_0
-  - htslib=1.15.1=h9753748_0
-  - httplib2=0.20.4=pyhd8ed1ab_0
-  - icu=70.1=h27087fc_0
-  - idna=3.3=pyhd8ed1ab_0
-  - importlib-metadata=4.11.4=py310hff52083_0
-  - importlib_resources=5.8.0=pyhd8ed1ab_0
-  - iniconfig=1.1.1=pyh9f0ad1d_0
-  - java-jdk=7.0.91=1
+  - grpcio=1.57.0=py311ha6695c7_0
+  - gxx_impl_linux-64=13.1.0=hc4be1a9_0
+  - harfbuzz=8.3.0=h3d44ed6_0
+  - httplib2=0.22.0=pyhd8ed1ab_0
+  - humanfriendly=10.0=py311h38be061_4
+  - icu=73.2=h59595ed_0
+  - idna=3.4=pyhd8ed1ab_0
+  - importlib_resources=6.0.1=pyhd8ed1ab_0
+  - iniconfig=2.0.0=pyhd8ed1ab_0
   - jinja2=3.1.2=pyhd8ed1ab_1
-  - jinja2-time=0.2.0=pyhd8ed1ab_3
   - jmespath=1.0.1=pyhd8ed1ab_0
-  - jpeg=9e=h166bdaf_2
-  - jsonschema=4.6.1=pyhd8ed1ab_0
-  - jupyter_core=4.10.0=py310hff52083_0
-  - kernel-headers_linux-64=2.6.32=he073ed8_15
+  - joblib=1.3.2=pyhd8ed1ab_0
+  - jsonschema=4.19.0=pyhd8ed1ab_1
+  - jsonschema-specifications=2023.7.1=pyhd8ed1ab_0
+  - jupyter_core=5.3.1=py311h38be061_0
+  - kernel-headers_linux-64=2.6.32=he073ed8_16
   - keyutils=1.6.1=h166bdaf_0
-  - kiwisolver=1.4.3=py37h7cecad7_0
-  - kraken2=2.1.2=pl5321h9f5acd7_2
-  - krb5=1.19.3=h3790be6_0
-  - lcms2=2.12=hddcbb42_0
-  - ld_impl_linux-64=2.36.1=hea4e1c9_2
-  - lerc=3.0=h9c3ff4c_0
-  - libblas=3.9.0=15_linux64_openblas
-  - libbrotlicommon=1.0.9=h166bdaf_7
-  - libbrotlidec=1.0.9=h166bdaf_7
-  - libbrotlienc=1.0.9=h166bdaf_7
-  - libcblas=3.9.0=15_linux64_openblas
-  - libcurl=7.83.1=h7bff187_0
-  - libdeflate=1.10=h7f98852_0
+  - krb5=1.21.2=h659d440_0
+  - ld_impl_linux-64=2.40=h41732ed_0
+  - lerc=4.0.0=h27087fc_0
+  - libabseil=20230125.3=cxx17_h59595ed_0
+  - libblas=3.9.0=17_linux64_openblas
+  - libcblas=3.9.0=17_linux64_openblas
+  - libcrc32c=1.1.2=h9c3ff4c_0
+  - libcurl=8.4.0=hca28451_0
+  - libdeflate=1.19=hd590300_0
   - libedit=3.1.20191231=he28a2e2_2
-  - libev=4.33=h516909a_1
+  - libev=4.33=hd590300_2
+  - libexpat=2.5.0=hcb278e6_1
   - libffi=3.4.2=h7f98852_5
-  - libgcc-devel_linux-64=12.1.0=h1ec3361_16
-  - libgcc-ng=12.1.0=h8d9b700_16
-  - libgfortran-ng=12.1.0=h69a702a_16
-  - libgfortran5=12.1.0=hdcd56e2_16
-  - libglib=2.74.0=h7a41b64_0
-  - libgomp=12.1.0=h8d9b700_16
-  - libiconv=1.17=h166bdaf_0
-  - liblapack=3.9.0=15_linux64_openblas
-  - libnghttp2=1.47.0=h727a467_0
+  - libgcc-devel_linux-64=13.1.0=he3cc6c4_0
+  - libgcc-ng=13.1.0=he5830b7_0
+  - libgfortran-ng=13.1.0=h69a702a_0
+  - libgfortran5=13.1.0=h15d22d2_0
+  - libglib=2.78.1=hebfc3b9_0
+  - libgomp=13.1.0=he5830b7_0
+  - libgrpc=1.57.0=h3905398_0
+  - libiconv=1.17=hd590300_2
+  - libjpeg-turbo=2.1.5.1=hd590300_1
+  - liblapack=3.9.0=17_linux64_openblas
+  - liblapacke=3.9.0=17_linux64_openblas
+  - libnghttp2=1.52.0=h61bc06f_0
   - libnsl=2.0.0=h7f98852_0
-  - libopenblas=0.3.20=pthreads_h78a6416_0
-  - libpng=1.6.38=h753d276_0
-  - libprotobuf=3.20.1=h6239696_0
-  - libsanitizer=12.1.0=ha89aaad_16
+  - libopenblas=0.3.23=pthreads_h80387f5_0
+  - libpng=1.6.39=h753d276_0
+  - libprotobuf=4.23.3=hd1fb520_0
+  - libsanitizer=13.1.0=hfd8a6a1_0
   - libsodium=1.0.18=h36c2ea0_1
-  - libssh2=1.10.0=ha56f1ee_2
-  - libstdcxx-devel_linux-64=12.1.0=h1ec3361_16
-  - libstdcxx-ng=12.1.0=ha89aaad_16
-  - libtiff=4.4.0=h0fcbabc_0
-  - libuuid=2.32.1=h7f98852_1000
-  - libwebp-base=1.2.4=h166bdaf_0
-  - libxcb=1.13=h7f98852_1004
-  - libxml2=2.9.14=h22db469_4
-  - libzlib=1.2.12=h166bdaf_1
+  - libsqlite=3.43.0=h2797004_0
+  - libssh2=1.11.0=h0841786_0
+  - libstdcxx-devel_linux-64=13.1.0=he3cc6c4_0
+  - libstdcxx-ng=13.1.0=hfd8a6a1_0
+  - libtiff=4.6.0=h29866fb_1
+  - libuuid=2.38.1=h0b41bf4_0
+  - libwebp-base=1.3.2=hd590300_0
+  - libxcb=1.15=h0b41bf4_0
+  - libzlib=1.2.13=hd590300_5
   - logmuse=0.2.6=pyh8c360ce_0
   - make=4.3=hd18ef5c_1
-  - markupsafe=2.1.1=py310h5764c6d_1
-  - multidict=6.0.2=py310h5764c6d_1
-  - nbformat=5.4.0=pyhd8ed1ab_0
-  - ncurses=6.3=h27087fc_1
-  - numpy=1.23.0=py310h53a5b5f_0
+  - markdown-it-py=3.0.0=pyhd8ed1ab_0
+  - markupsafe=2.1.3=py311h459d7ec_0
+  - mdurl=0.1.0=pyhd8ed1ab_0
+  - multidict=6.0.4=py311h2582759_0
+  - nbformat=5.9.2=pyhd8ed1ab_0
+  - ncurses=6.4=hcb278e6_0
+  - numpy=1.25.2=py311h64a7726_0
   - oauth2client=4.1.3=py_0
-  - openssl=1.1.1s=h0b41bf4_1
-  - packaging=21.3=pyhd8ed1ab_0
-  - pandas=1.4.3=py310h769672d_0
-  - pango=1.50.10=hc4f8a73_0
-  - paramiko=2.11.0=pyhd8ed1ab_0
-  - pcre2=10.37=hc3806b6_1
-  - peppy=0.31.2=pyhd8ed1ab_2
-  - pip=22.1.2=pyhd8ed1ab_0
-  - pixman=0.40.0=h36c2ea0_0
+  - openssl=3.2.0=hd590300_1
+  - packaging=23.1=pyhd8ed1ab_0
+  - pandas=2.0.3=py311h320fe9a_1
+  - pango=1.50.14=ha41ecd1_2
+  - paramiko=3.3.1=pyhd8ed1ab_0
+  - pcre2=10.40=hc3806b6_0
+  - peppy=0.35.7=pyhd8ed1ab_0
+  - pip=23.2.1=pyhd8ed1ab_0
+  - pixman=0.42.2=h59595ed_0
+  - pkgutil-resolve-name=1.3.10=pyhd8ed1ab_0
   - plac=1.3.5=pyhd8ed1ab_0
-  - pluggy=1.0.0=py310hff52083_3
+  - platformdirs=3.10.0=pyhd8ed1ab_0
+  - pluggy=1.3.0=pyhd8ed1ab_0
   - ply=3.11=py_1
-  - prettytable=3.3.0=pyhd8ed1ab_0
-  - protobuf=3.20.1=py310hd8f1fbe_0
-  - psutil=5.9.1=py310h5764c6d_0
+  - pooch=1.7.0=pyha770c72_3
+  - prettytable=3.8.0=pyhd8ed1ab_0
+  - protobuf=4.23.3=py311hbec7ed6_0
+  - psutil=5.9.5=py311h2582759_0
   - pthread-stubs=0.4=h36c2ea0_1001
-  - pulp=2.6.0=py310hff52083_1
-  - py=1.11.0=pyh6c4a22f_0
+  - pulp=2.7.0=py311h38be061_0
   - pyasn1=0.4.8=py_0
   - pyasn1-modules=0.2.7=py_0
   - pycparser=2.21=pyhd8ed1ab_0
-  - pyopenssl=22.0.0=pyhd8ed1ab_0
-  - pyparsing=3.0.9=pyhd8ed1ab_0
-  - pysam=0.19.1=py37h8fe4cdf_0
-  - pysocks=1.7.1=py37h89c1867_5
-  - python=3.7.12=hb7a2778_100_cpython
+  - pygments=2.16.1=pyhd8ed1ab_0
+  - pynacl=1.5.0=py311hd4cff14_2
+  - pyopenssl=23.2.0=pyhd8ed1ab_1
+  - pyparsing=3.1.1=pyhd8ed1ab_0
+  - pysftp=0.2.9=py_1
+  - pysocks=1.7.1=pyha2e5f31_6
+  - pytest=7.4.0=pyhd8ed1ab_0
+  - python=3.11.5=hab00c5b_0_cpython
   - python-dateutil=2.8.2=pyhd8ed1ab_0
-  - python-lzo=1.14=py37hd06c622_1
-  - python_abi=3.7=2_cp37m
-  - pytz=2022.1=pyhd8ed1ab_0
+  - python-fastjsonschema=2.18.0=pyhd8ed1ab_0
+  - python-irodsclient=1.1.8=pyhd8ed1ab_0
+  - python-slugify=8.0.1=pyhd8ed1ab_0
+  - python-tzdata=2023.3=pyhd8ed1ab_0
+  - python_abi=3.11=3_cp311
+  - pytz=2023.3=pyhd8ed1ab_0
   - pyu2f=0.1.5=pyhd8ed1ab_0
-  - pyyaml=6.0=py310h5764c6d_4
-  - r-base=4.2.1=ha8c3e7c_1
-  - ratelimiter=1.2.0=py_1002
-  - re2=2022.06.01=h27087fc_0
-  - readline=8.1.2=h0f457ee_0
-  - requests=2.28.1=pyhd8ed1ab_0
-  - rsync=3.1.3=h1245774_1003
-  - samtools=1.15.1=h1170115_0
+  - pyyaml=6.0.1=py311h459d7ec_0
+  - r-base=4.3.1=h639d9d3_5
+  - re2=2023.03.02=h8c504da_0
+  - readline=8.2=h8228510_1
+  - referencing=0.30.2=pyhd8ed1ab_0
+  - requests=2.31.0=pyhd8ed1ab_0
+  - reretry=0.11.8=pyhd8ed1ab_0
+  - rich=13.5.1=pyhd8ed1ab_0
+  - rpds-py=0.10.0=py311h46250e7_0
+  - rsa=4.9=pyhd8ed1ab_0
+  - s3transfer=0.6.2=pyhd8ed1ab_0
+  - scikit-learn=1.3.0=py311hc009520_0
+  - scipy=1.11.2=py311h64a7726_0
   - sed=4.8=he412f7d_0
-  - seqtk=1.3=h7132678_4
-  - setuptools=63.1.0=py310hff52083_0
-  - setuptools-scm=7.0.4=pyhd8ed1ab_0
+  - seqtk=r82=0
+  - setuptools=68.1.2=pyhd8ed1ab_0
+  - setuptools-scm=7.1.0=pyhd8ed1ab_0
   - six=1.16.0=pyh6c4a22f_0
-  - sqlite=3.39.0=h4ff8645_0
+  - slacker=0.14.0=py_0
+  - smart_open=6.3.0=pyhd8ed1ab_1
+  - smmap=3.0.5=pyh44b312d_0
+  - snakemake=7.32.3=hdfd78af_0
+  - snakemake-minimal=7.32.3=pyhdfd78af_0
   - stone=3.3.1=pyhd8ed1ab_0
   - stopit=1.1.2=py_0
-  - sysroot_linux-64=2.12=he073ed8_15
-  - tabulate=0.8.10=pyhd8ed1ab_0
+  - sysroot_linux-64=2.12=he073ed8_16
+  - tabulate=0.9.0=pyhd8ed1ab_1
   - text-unidecode=1.3=py_0
+  - threadpoolctl=3.2.0=pyha21a80b_0
+  - throttler=1.2.2=pyhd8ed1ab_0
   - tk=8.6.12=h27826a3_0
-  - tktable=2.10=hb7b940f_3
+  - tktable=2.10=h0c5db8f_4
   - tomli=2.0.1=pyhd8ed1ab_0
-  - toposort=1.7=pyhd8ed1ab_0
-  - traitlets=5.3.0=pyhd8ed1ab_0
-  - typing-extensions=4.3.0=hd8ed1ab_0
-  - typing_extensions=4.3.0=pyha770c72_0
-  - unicodedata2=14.0.0=py37h540881e_1
-  - urllib3=1.26.10=pyhd8ed1ab_0
-  - wget=1.20.3=ha56f1ee_1
-  - wheel=0.37.1=pyhd8ed1ab_0
-  - wrapt=1.14.1=py310h5764c6d_0
+  - toposort=1.10=pyhd8ed1ab_0
+  - traitlets=5.9.0=pyhd8ed1ab_0
+  - typing-extensions=4.7.1=hd8ed1ab_0
+  - typing_extensions=4.7.1=pyha770c72_0
+  - tzdata=2023c=h71feb2d_0
+  - ubiquerg=0.6.3=pyhd8ed1ab_0
+  - unidecode=1.3.6=pyhd8ed1ab_0
+  - uritemplate=4.1.1=pyhd8ed1ab_0
+  - urllib3=1.26.15=pyhd8ed1ab_0
+  - veracitools=0.1.3=py_0
+  - wcwidth=0.2.6=pyhd8ed1ab_0
+  - wheel=0.41.2=pyhd8ed1ab_0
+  - wrapt=1.15.0=py311h2582759_0
   - xorg-kbproto=1.0.7=h7f98852_1002
-  - xorg-libice=1.0.10=h7f98852_0
-  - xorg-libsm=1.2.3=hd9c2040_1000
-  - xorg-libx11=1.7.2=h7f98852_0
-  - xorg-libxau=1.0.9=h7f98852_0
+  - xorg-libice=1.1.1=hd590300_0
+  - xorg-libsm=1.2.4=h7391055_0
+  - xorg-libx11=1.8.7=h8ee46fc_0
+  - xorg-libxau=1.0.11=hd590300_0
   - xorg-libxdmcp=1.1.3=h7f98852_0
-  - xorg-libxext=1.3.4=h7f98852_1
-  - xorg-libxrender=0.9.10=h7f98852_1003
-  - xorg-libxt=1.2.1=h7f98852_2
+  - xorg-libxext=1.3.4=h0b41bf4_2
+  - xorg-libxrender=0.9.11=hd590300_0
+  - xorg-libxt=1.3.0=hd590300_1
   - xorg-renderproto=0.11.1=h7f98852_1002
-  - xorg-xextproto=7.3.0=h7f98852_1002
+  - xorg-xextproto=7.3.0=h0b41bf4_1003
   - xorg-xproto=7.0.31=h7f98852_1007
-  - xz=5.2.5=h516909a_1
+  - xz=5.2.6=h166bdaf_0
   - yaml=0.2.5=h7f98852_2
-  - yarl=1.7.2=py310h5764c6d_2
-  - yte=1.5.1=py310hff52083_0
-  - zipp=3.8.0=pyhd8ed1ab_0
-  - zlib=1.2.12=h166bdaf_1
-  - zstd=1.5.2=h6239696_4
+  - yarl=1.9.2=py311h459d7ec_0
+  - yte=1.5.1=pyha770c72_2
+  - zipp=3.16.2=pyhd8ed1ab_0
+  - zlib=1.2.13=hd590300_5
+  - zstd=1.5.5=hfc55251_0
+prefix: /home/fs01/lam4003/bin/miniconda3/envs/short-read-taxonomy
